<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img"
    tools:context="com.pine.emeter.activity.Register">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/logo" />


                <EditText
                    android:id="@+id/first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:padding="7dp" />


                <EditText
                    android:id="@+id/last"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:padding="7dp" />


                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:padding="7dp" />


                <EditText
                    android:id="@+id/number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:hint="Contact Number"
                    android:inputType="number"
                    android:padding="7dp" />


                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/address"
                    android:inputType="textPersonName"
                    android:padding="7dp" />


                <EditText
                    android:id="@+id/cuszone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/customer_zone"
                    android:inputType="textCapWords"
                    android:padding="7dp" />


                <EditText
                    android:id="@+id/meternumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/meter_number"
                    android:inputType="textCapWords"
                    android:padding="7dp" />


                <EditText
                    android:id="@+id/metertype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:focusableInTouchMode="false"
                    android:hint="@string/meter_type"
                    android:inputType="textCapWords"
                    android:padding="7dp" />


                <Button
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/blue_button"
                    android:text="@string/register"
                    android:textColor="@color/white" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
