<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img"
    tools:context="com.pine.emeter.activity.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitXY"
            android:src="@drawable/logo" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/edittext"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"
                android:text="@string/remember_me"
                android:paddingLeft="5dp"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/forgot"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/forgot"
                android:textColor="@color/white"
                android:textSize="12dp" />
        </RelativeLayout>

        <Button
            android:id="@+id/buttonlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/blue_button"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18dp" />


    </LinearLayout>

</RelativeLayout>
