<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbar_color"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/logo_inner" />

                <ImageView
                    android:id="@+id/toggle"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/menu_icon" />

            </RelativeLayout>


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/first_name"
                    android:textColor="@color/white"
                    android:textSize="11dp" />


                <EditText
                    android:id="@+id/first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:padding="7dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/last_name"
                    android:textColor="@color/white"
                    android:textSize="11dp" />


                <EditText
                    android:id="@+id/last"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:padding="7dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/email_id"
                    android:textColor="@color/white"
                    android:textSize="11dp" />


                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:padding="7dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/contact_number"
                    android:textColor="@color/white"
                    android:textSize="11dp" />


                <EditText
                    android:id="@+id/number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/contact_number"
                    android:inputType="number"
                    android:padding="7dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/address"
                    android:textColor="@color/white"
                    android:textSize="11dp" />


                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/address"
                    android:inputType="textPersonName"
                    android:padding="7dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/customer_zone"
                    android:textColor="@color/white"
                    android:textSize="11dp" />


                <EditText
                    android:id="@+id/cuszone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/customer_zone"
                    android:inputType="textCapWords"
                    android:padding="7dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/meter_number"
                    android:textColor="@color/white"
                    android:textSize="11dp" />


                <EditText
                    android:id="@+id/meternumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/meter_number"
                    android:inputType="textCapWords"
                    android:padding="7dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/meter_type"
                    android:textColor="@color/white"
                    android:textSize="11dp" />


                <EditText
                    android:id="@+id/metertype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:focusableInTouchMode="false"
                    android:hint="@string/meter_type"
                    android:inputType="textCapWords"
                    android:padding="7dp" />


                <Button
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/blue_button"
                    android:text="@string/update"
                    android:textColor="@color/white" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</RelativeLayout>